--- a/Ticketautomat/MainWindow.xaml
+++ b/Ticketautomat/MainWindow.xaml
@@ -303,8 +303,18 @@
                 <Button x:Name="Button_AdminDashboard_AdminButtonOptions_ChangePrices" Content="Preise ändern" FontSize="60" Grid.Row="3" Click="Button_AdminDashboard_AdminButtonOptions_ChangePrices_Click"/>
             </Grid>
             <ScrollViewer x:Name="ScrollViewer_AdminDashboard_Logs" HorizontalScrollBarVisibility="Disabled" Width="700" Height="725" VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right">
-                    <!--Hier content für Log-Einträge-->
+                <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0">
+                    <ListBox Name="List_Logs" Margin="20" HorizontalAlignment="Left" Width="640">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal" Background="{Binding Item3}">
+                                    <TextBlock Margin="0,10,0,10" Text="{Binding Date}"/>
+                                    <TextBlock Margin="20,10,0,10" Text="{Binding Author}"/>
+                                    <TextBlock Margin="20,10,0,10" Text="{Binding Content}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
                 </StackPanel>
             </ScrollViewer>
         </Grid>
