--- a/Ticketautomat/MainWindow.xaml
+++ b/Ticketautomat/MainWindow.xaml
@@ -383,18 +383,18 @@
                 <Label x:Name="Label_AdminChangePricesMenu_Table_Pensioner_B" Content="Lädt..." Grid.Column="5" Grid.Row="4" FontSize="30"/>
                 <Label x:Name="Label_AdminChangePricesMenu_Table_Pensioner_C" Content="Lädt..." Grid.Column="5" Grid.Row="5" FontSize="30"/>
 
-                <Button x:Name="Button_AdminChangePricesMenu_Table_Child_A" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="2" Grid.Row="3"/>
-                <Button x:Name="Button_AdminChangePricesMenu_Table_Child_B" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="2" Grid.Row="4"/>
-                <Button x:Name="Button_AdminChangePricesMenu_Table_Child_C" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="2" Grid.Row="5"/>
-                <Button x:Name="Button_AdminChangePricesMenu_Table_Reduced_A" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="3" Grid.Row="3"/>
-                <Button x:Name="Button_AdminChangePricesMenu_Table_Reduced_B" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="3" Grid.Row="4"/>
-                <Button x:Name="Button_AdminChangePricesMenu_Table_Reduced_C" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="3" Grid.Row="5"/>
-                <Button x:Name="Button_AdminChangePricesMenu_Table_Adult_A" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="4" Grid.Row="3"/>
-                <Button x:Name="Button_AdminChangePricesMenu_Table_Adult_B" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="4" Grid.Row="4"/>
-                <Button x:Name="Button_AdminChangePricesMenu_Table_Adult_C" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="4" Grid.Row="5"/>
-                <Button x:Name="Button_AdminChangePricesMenu_Table_Pensioner_A" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="5" Grid.Row="3"/>
-                <Button x:Name="Button_AdminChangePricesMenu_Table_Pensioner_B" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="5" Grid.Row="4"/>
-                <Button x:Name="Button_AdminChangePricesMenu_Table_Pensioner_C" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="5" Grid.Row="5"/>
+                <Button x:Name="Button_AdminChangePricesMenu_Table_Child_A" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="2" Grid.Row="3" Click="Button_AdminChangePricesMenu_Table_Child_A_Click"/>
+                <Button x:Name="Button_AdminChangePricesMenu_Table_Child_B" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="2" Grid.Row="4" Click="Button_AdminChangePricesMenu_Table_Child_B_Click"/>
+                <Button x:Name="Button_AdminChangePricesMenu_Table_Child_C" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="2" Grid.Row="5" Click="Button_AdminChangePricesMenu_Table_Child_C_Click"/>
+                <Button x:Name="Button_AdminChangePricesMenu_Table_Reduced_A" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="3" Grid.Row="3" Click="Button_AdminChangePricesMenu_Table_Reduced_A_Click"/>
+                <Button x:Name="Button_AdminChangePricesMenu_Table_Reduced_B" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="3" Grid.Row="4" Click="Button_AdminChangePricesMenu_Table_Reduced_B_Click"/>
+                <Button x:Name="Button_AdminChangePricesMenu_Table_Reduced_C" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="3" Grid.Row="5" Click="Button_AdminChangePricesMenu_Table_Reduced_C_Click"/>
+                <Button x:Name="Button_AdminChangePricesMenu_Table_Adult_A" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="4" Grid.Row="3" Click="Button_AdminChangePricesMenu_Table_Adult_A_Click"/>
+                <Button x:Name="Button_AdminChangePricesMenu_Table_Adult_B" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="4" Grid.Row="4" Click="Button_AdminChangePricesMenu_Table_Adult_B_Click"/>
+                <Button x:Name="Button_AdminChangePricesMenu_Table_Adult_C" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="4" Grid.Row="5" Click="Button_AdminChangePricesMenu_Table_Adult_C_Click"/>
+                <Button x:Name="Button_AdminChangePricesMenu_Table_Pensioner_A" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="5" Grid.Row="3" Click="Button_AdminChangePricesMenu_Table_Pensioner_A_Click"/>
+                <Button x:Name="Button_AdminChangePricesMenu_Table_Pensioner_B" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="5" Grid.Row="4" Click="Button_AdminChangePricesMenu_Table_Pensioner_B_Click"/>
+                <Button x:Name="Button_AdminChangePricesMenu_Table_Pensioner_C" Content="Ändern" Width="50" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25,0" Grid.Column="5" Grid.Row="5" Click="Button_AdminChangePricesMenu_Table_Pensioner_C_Click"/>
             </Grid>
             <Grid x:Name="AdminChangePricesMenu_ChangeDialogue" Visibility="Collapsed">
                 <Rectangle x:Name="Rectangle_AdminChangePricesMenu_ChangeDialogue_Background" Opacity="0.5" Fill="Black" Height="875" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="0"/>
@@ -402,8 +402,8 @@
                 <Rectangle x:Name="Rectangle_AdminChangePricesMenu_ChangeDialogue_Foreground" Fill="White" Width="100" Height="28" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="0"/>
                 <Label x:Name="Label_AdminChangePricesMenu_ChangeDialogue_Title" Content="NEUEN PREIS EINGEBEN" Foreground="White" Height="130" Width="1325" FontSize="50" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="518,339,0,0"/>
                 <Label x:Name="Label_AdminChangePricesMenu_ChangeDialogue_Content" Content="€" Foreground="White" FontSize="30" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="855,423,0,0"/>
-                <Button x:Name="Button_AdminChangePricesMenu_ChangeDialogue_CloseButton" Content="OK" Width="250" Height="30" VerticalAlignment="Top" Margin="675,469,675,0" FontSize="20" Cursor="Hand" Click="Button_ErrorWindow_CloseButton_Click"/>
-                <TextBlock x:Name="TextBlock_AdminChangePricesMenu_NewPrice" Width="100" Height="28" FontSize="19" Text="1,50"/>
+                <Button x:Name="Button_AdminChangePricesMenu_ChangeDialogue_CloseButton" Content="OK" Width="250" Height="30" VerticalAlignment="Top" Margin="675,469,675,0" FontSize="20" Cursor="Hand" Click="Button_AdminChangePricesMenu_ChangeDialogue_CloseButton_Click"/>
+                <TextBox x:Name="TextBox_AdminChangePricesMenu_NewPrice" Width="100" Height="28" FontSize="19" Text="1,50"/>
             </Grid>
         </Grid>
         <Grid x:Name="AdminDisableMachine" Visibility="Collapsed">
