--- a/Ticketautomat/MainWindow.xaml
+++ b/Ticketautomat/MainWindow.xaml
@@ -328,10 +328,10 @@
             </Grid>
             <ScrollViewer x:Name="ScrollViewer_AdminDashboard_Logs" HorizontalScrollBarVisibility="Disabled" Width="700" Height="725" VerticalAlignment="Bottom" HorizontalAlignment="Right">
                 <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0" Background="DarkGray">
-                    <ListBox Name="List_Logs" Margin="20" HorizontalAlignment="Left" Width="640">
+                    <ListBox Name="List_Logs" Margin="20" HorizontalAlignment="Left" Width="640" Background="Snow">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
-                                <StackPanel Orientation="Horizontal" Background="Snow">
+                                <StackPanel Orientation="Horizontal">
                                     <TextBlock Margin="0,10,0,10" Text="{Binding Date}"/>
                                     <TextBlock Margin="20,10,0,10" Text="{Binding Author}"/>
                                     <TextBlock Margin="20,10,0,10" Text="{Binding Content}"/>
