--- a/Ticketautomat/MainWindow.xaml
+++ b/Ticketautomat/MainWindow.xaml
@@ -348,7 +348,7 @@
             <Label x:Name="Label_AdminSavingsManagement_Title" Content="SPEICHERVERWALTUNG" Height="130" Width="1325" FontSize="90" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="40,40,0,0"/>
             <Label x:Name="Label_AdminSavingsManagement_CurrentFillState" Width="700" Height="725" Content="Tickets übrig: 1000 Stück&#x0a;0,05€: 76 Stück&#x0a;0,10€: 35 Stück&#x0a;..." FontSize="40" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
             <Button x:Name="Button_AdminSavingsManagement_GoBackButton" Content="Zurück" Height="30" Width="200" FontSize="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,90,30,0" Click="Button_AdminSavingsManagement_GoBackButton_Click"  Cursor="Hand"/>
-            <Grid x:Name="AdminSavingsManagement_AdminButtonOptions" Margin="100,280,900,90">
+            <Grid x:Name="AdminSavingsManagement_AdminButtonOptions" Margin="100,280,900,90" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="4*"/>
                     <RowDefinition Height="4*"/>
@@ -368,12 +368,12 @@
                 </DockPanel>
             </Grid>
         </Grid>
-        <Grid x:Name="AdminChangePricesMenu" Visibility="Collapsed">
-            <Image Source="Resources/Images/background_table.png"/>
+        <Grid x:Name="AdminChangePricesMenu" Visibility="Collapsed" Margin="0, 25, 0, 0">
+            <Image Source="Resources/Images/background_table.png" Margin="0, 0, 25, 0"/>
             <Rectangle x:Name="Rectangle_AdminChangePricesMenu_BelowTitle" Fill="ForestGreen" Height="7" Width="1450" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 150"/>
             <Label x:Name="Label_AdminChangePricesMenu_Title" Content="TICKETPREISE ANPASSEN" Height="130" Width="1325" FontSize="90" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="40,40,0,0"/>
             <Button x:Name="Button_AdminChangePricesMenu_SaveAndGoBackButton" Content="Speichern und zurück" FontSize="40" Height="80" Width="400" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,30" Click="Button_AdminChangePricesMenu_SaveAndGoBackButton_Click" Cursor="Hand"/>
-            <Grid x:Name="AdminChangePricesMenu_Table">
+            <Grid x:Name="AdminChangePricesMenu_Table" Margin="25,0,25,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="7*"/>
                     <ColumnDefinition Width="7*"/>
